--- a/index.css
+++ b/index.css
@@ -1,4 +1,86 @@
-.top{
-    height: 80px;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+body{
+    margin: 0px;
+    font-family: 'Montserrat', sans-serif;
+}
+.btn{
+  cursor: pointer;
+  background: rgba(99,93,255,255);
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+}
+.cont1{
+    position: relative;
+    height: 1100px;
     width: 100%;
+    margin-top: 0px;
+    display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows: repeat(7, 1fr);
+}
+.logo{
+    grid-row: 1/2;
+    grid-column: 2/3;
+    justify-self: center;
+    align-self: center;
+    position: absolute;
+    /*left: 10%;*/
+    font-size: 30px;
+}
+.menu{
+    grid-row: 1/2;
+    grid-column: -2/-1;
+    position: absolute;
+    right: 0px;
+    background: rgba(99,93,255,255);
+    height: 115px;
+    width: 100px;
+    padding: 10px;
+    cursor: pointer;
+    border: none;
+    border-radius: 0 0 0 20px;
+}
+.po1{
+    grid-row: 2/3;
+    grid-column: 3/6;
+    justify-self: center;
+    align-self: center;
+    font-size: 40px;
+    position: relative;
+    /*left: 20px;*/
+}
+.po{
+    position: relative;
+    grid-row: 3/4;
+    grid-column: 2/7;
+    justify-self: center;
+    align-self: center;
+    font-size: 75px;
+    text-transform: uppercase;
+}
+.po2{
+    margin-bottom: 0px;
+    font-family: 'Montserrat', sans-serif;
+}
+.po21{
+    justify-self: center;
+    align-self: center;
+    font-size: 75px;
+    position: relative;
+    padding: 0 50px;
+    font-family: 'Montserrat', sans-serif;
+}
+
+.dis{
+    grid-row: 4/5;
+    grid-column: 1/-1;
+    position: absolute;
+    justify-self: center;
+    align-self: center;
+    height: 66px;
+    width: 320px;
+    padding: 5px 10px;
+    font-size: 20px;
+    border-radius: 30px 0 30px 30px;
 }
